[Feat] Agregar el listado del detallado de la venta de los cursos en los que el usuario esta inscrito

--- a/src/app/modules/tienda-auth/student-dashboard/student-dashboard.component.html
+++ b/src/app/modules/tienda-auth/student-dashboard/student-dashboard.component.html
@@ -752,258 +752,40 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <th>
-                          <span class="b3"
-                            ><a href="#">Speaking Korean for Beginners</a></span
-                          >
-                        </th>
-                        <td>
-                          <div class="rbt-review">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
+                      <ng-container *ngFor="let sale_detail of sales_details">
+                        <tr>
+                          <th>
+                            <span class="b3"
+                              ><a href="#">{{ sale_detail.course.title }}</a></span
+                            >
+                          </th>
+                          <td>
+                            <div class="rbt-review">
+                              <div class="rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                              </div>
+                              <span class="rating-count"> (9 Reviews)</span>
                             </div>
-                            <span class="rating-count"> (9 Reviews)</span>
-                          </div>
-                          <p class="b2">Good</p>
-                        </td>
-                        <td>
-                          <div class="rbt-button-group justify-content-end">
-                            <a
-                              class="rbt-btn btn-xs bg-primary-opacity radius-round"
-                              href="#"
-                              title="Edit"
-                              ><i class="feather-edit pl--0"></i
-                            ></a>
-                            <a
-                              class="rbt-btn btn-xs bg-color-danger-opacity radius-round color-danger"
-                              href="#"
-                              title="Delete"
-                              ><i class="feather-trash-2 pl--0"></i
-                            ></a>
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th>
-                          <span class="b3"
-                            ><a href="#">Introduction to Calculus</a></span
-                          >
-                        </th>
-                        <td>
-                          <div class="rbt-review">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
+                            <p class="b2">Good</p>
+                          </td>
+                          <td>
+                            <div class="rbt-button-group justify-content-end">
+                              <a
+                                class="rbt-btn btn-xs bg-primary-opacity radius-round"
+                                href="#"
+                                title="Edit"
+                                onclick="return false;"
+                                (click)="showReview(sale_detail)"
+                                ><i class="feather-edit pl--0"></i
+                              ></a>
                             </div>
-                            <span class="rating-count"> (9 Reviews)</span>
-                          </div>
-                          <p class="b2">Good</p>
-                        </td>
-                        <td>
-                          <div class="rbt-button-group justify-content-end">
-                            <a
-                              class="rbt-btn btn-xs bg-primary-opacity radius-round"
-                              href="#"
-                              title="Edit"
-                              ><i class="feather-edit pl--0"></i
-                            ></a>
-                            <a
-                              class="rbt-btn btn-xs bg-color-danger-opacity radius-round color-danger"
-                              href="#"
-                              title="Delete"
-                              ><i class="feather-trash-2 pl--0"></i
-                            ></a>
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th>
-                          <span class="b3"
-                            ><a href="#">How to Write Your First Novel</a></span
-                          >
-                        </th>
-                        <td>
-                          <div class="rbt-review">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <span class="rating-count"> (9 Reviews)</span>
-                          </div>
-                          <p class="b2">Good</p>
-                        </td>
-                        <td>
-                          <div class="rbt-button-group justify-content-end">
-                            <a
-                              class="rbt-btn btn-xs bg-primary-opacity radius-round"
-                              href="#"
-                              title="Edit"
-                              ><i class="feather-edit pl--0"></i
-                            ></a>
-                            <a
-                              class="rbt-btn btn-xs bg-color-danger-opacity radius-round color-danger"
-                              href="#"
-                              title="Delete"
-                              ><i class="feather-trash-2 pl--0"></i
-                            ></a>
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th>
-                          <span class="b3"
-                            ><a href="#">Speaking Korean for Beginners</a></span
-                          >
-                        </th>
-                        <td>
-                          <div class="rbt-review">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <span class="rating-count"> (9 Reviews)</span>
-                          </div>
-                          <p class="b2">Good</p>
-                        </td>
-                        <td>
-                          <div class="rbt-button-group justify-content-end">
-                            <a
-                              class="rbt-btn btn-xs bg-primary-opacity radius-round"
-                              href="#"
-                              title="Edit"
-                              ><i class="feather-edit pl--0"></i
-                            ></a>
-                            <a
-                              class="rbt-btn btn-xs bg-color-danger-opacity radius-round color-danger"
-                              href="#"
-                              title="Delete"
-                              ><i class="feather-trash-2 pl--0"></i
-                            ></a>
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th>
-                          <span class="b3"
-                            ><a href="#">How to Write Your First Novel</a></span
-                          >
-                        </th>
-                        <td>
-                          <div class="rbt-review">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <span class="rating-count"> (9 Reviews)</span>
-                          </div>
-                          <p class="b2">Good</p>
-                        </td>
-                        <td>
-                          <div class="rbt-button-group justify-content-end">
-                            <a
-                              class="rbt-btn btn-xs bg-primary-opacity radius-round"
-                              href="#"
-                              title="Edit"
-                              ><i class="feather-edit pl--0"></i
-                            ></a>
-                            <a
-                              class="rbt-btn btn-xs bg-color-danger-opacity radius-round color-danger"
-                              href="#"
-                              title="Delete"
-                              ><i class="feather-trash-2 pl--0"></i
-                            ></a>
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th>
-                          <span class="b3"
-                            ><a href="#">Speaking Korean for Beginners</a></span
-                          >
-                        </th>
-                        <td>
-                          <div class="rbt-review">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <span class="rating-count"> (9 Reviews)</span>
-                          </div>
-                          <p class="b2">Good</p>
-                        </td>
-                        <td>
-                          <div class="rbt-button-group justify-content-end">
-                            <a
-                              class="rbt-btn btn-xs bg-primary-opacity radius-round"
-                              href="#"
-                              title="Edit"
-                              ><i class="feather-edit pl--0"></i
-                            ></a>
-                            <a
-                              class="rbt-btn btn-xs bg-color-danger-opacity radius-round color-danger"
-                              href="#"
-                              title="Delete"
-                              ><i class="feather-trash-2 pl--0"></i
-                            ></a>
-                          </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <th>
-                          <span class="b3"
-                            ><a href="#">Speaking Korean for Beginners</a></span
-                          >
-                        </th>
-                        <td>
-                          <div class="rbt-review">
-                            <div class="rating">
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <span class="rating-count"> (9 Reviews)</span>
-                          </div>
-                          <p class="b2">Good</p>
-                        </td>
-                        <td>
-                          <div class="rbt-button-group justify-content-end">
-                            <a
-                              class="rbt-btn btn-xs bg-primary-opacity radius-round"
-                              href="#"
-                              title="Edit"
-                              ><i class="feather-edit pl--0"></i
-                            ></a>
-                            <a
-                              class="rbt-btn btn-xs bg-color-danger-opacity radius-round color-danger"
-                              href="#"
-                              title="Delete"
-                              ><i class="feather-trash-2 pl--0"></i
-                            ></a>
-                          </div>
-                        </td>
-                      </tr>
+                          </td>
+                        </tr>
+                      </ng-container>
                     </tbody>
                   </table>
                 </div>
