[Feat] Agregar redireccion al perfil del usuario

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -965,7 +965,7 @@
                     <a href="#">Instructor Dashboard</a>
                     <ul class="submenu">
                       <li><a href="instructor-dashboard.html">Dashboard</a></li>
-                      <li><a href="instructor-profile.html">Profile</a></li>
+                      <li><a href="#" onclick="return false;" >Profile</a></li>
                       <li>
                         <a href="instructor-enrolled-courses.html"
                           >Enrolled Courses</a
@@ -1504,7 +1504,7 @@
                     </div>
                     <div class="admin-info">
                       <span class="name">Nipa Bali</span>
-                      <a class="rbt-btn-link color-primary" href="profile.html"
+                      <a class="rbt-btn-link color-primary" href="#" onclick="return false;" routerLink="/store-auth/student-profile"
                         >View Profile</a
                       >
                     </div>
