[Feat] Agregar la opción de filtrar por categoria uno o varios cursos

--- a/src/app/modules/tienda-guest/filters-course/filters-course.component.html
+++ b/src/app/modules/tienda-guest/filters-course/filters-course.component.html
@@ -125,6 +125,7 @@
                             <input
                               [id]="'cat-list-' + categorie._id"
                               type="checkbox"
+                              (click)="addCategorie(categorie._id)"
                               [name]="'cat-list-' + categorie._id"
                             />
                             <label [attr.for]="'cat-list-' + categorie._id"
