[Feat] Agregar opcion de filtrar uno o varios cursos por instructor

--- a/src/app/modules/tienda-guest/filters-course/filters-course.component.html
+++ b/src/app/modules/tienda-guest/filters-course/filters-course.component.html
@@ -254,6 +254,7 @@
                             <input
                               [id]="'ins-list-' + instructor._id"
                               type="checkbox"
+                              (click)="addInstructor(instructor._id)"
                               [name]="'ins-list-' + instructor._id"
                             />
                             <label [attr.for]="'ins-list-' + instructor._id"
