[Feat] Agregar la opcion de filtrar por niveles

--- a/src/app/modules/tienda-guest/filters-course/filters-course.component.html
+++ b/src/app/modules/tienda-guest/filters-course/filters-course.component.html
@@ -284,6 +284,7 @@
                             <input
                               [id]="'lavels-list-' + i"
                               type="checkbox"
+                              (click)="addLevels(level.name)"
                               [name]="'lavels-list-' + i"
                             />
                             <label [attr.for]="'lavels-list-' + i"
