[Feat] Agregar la opción de filtrar en base al precio

--- a/src/app/modules/tienda-guest/filters-course/filters-course.component.html
+++ b/src/app/modules/tienda-guest/filters-course/filters-course.component.html
@@ -345,11 +345,11 @@
                                 <span>Price :</span
                                 ><input type="text" id="amount" />
                               </div>
-                              <div class="price--filter">
+                              <!-- <div class="price--filter">
                                 <a class="rbt-btn btn-gradient btn-sm" href="#"
                                   >Filter</a
                                 >
-                              </div>
+                              </div> -->
                             </div>
                           </div>
                         </form>
