[Feat] Agregar la opcion de filtrar uno o varios cursos por rating

--- a/src/app/modules/tienda-guest/filters-course/filters-course.component.html
+++ b/src/app/modules/tienda-guest/filters-course/filters-course.component.html
@@ -153,6 +153,7 @@
                           <input
                             id="cat-radio-1"
                             type="radio"
+                            (click)="selectedRating(5)"
                             name="rbt-radio"
                           />
                           <label for="cat-radio-1">
@@ -170,6 +171,7 @@
                           <input
                             id="cat-radio-2"
                             type="radio"
+                            (click)="selectedRating(4)"
                             name="rbt-radio"
                           />
                           <label for="cat-radio-2">
@@ -187,6 +189,7 @@
                           <input
                             id="cat-radio-3"
                             type="radio"
+                            (click)="selectedRating(3)"
                             name="rbt-radio"
                           />
                           <label for="cat-radio-3">
@@ -204,6 +207,7 @@
                           <input
                             id="cat-radio-4"
                             type="radio"
+                            (click)="selectedRating(2)"
                             name="rbt-radio"
                           />
                           <label for="cat-radio-4">
@@ -222,6 +226,7 @@
                           <input
                             id="cat-radio-5"
                             type="radio"
+                            (click)="selectedRating(1)"
                             name="rbt-radio"
                           />
                           <label for="cat-radio-5">
