--- a/src/app/modules/tienda-auth/course-leason/course-leason.component.html
+++ b/src/app/modules/tienda-auth/course-leason/course-leason.component.html
@@ -90,16 +90,18 @@
                     <span class="play-view-text d-block color-white"><i class="feather-eye"></i> Preview this course</span>
                 </div>
             </a> -->
-        <iframe
-          style="width: 100%"
-          height="800"
-          src="https://www.youtube.com/embed/GBiyHI_rTeE"
-          title="Crea un ecommerce con Nodejs + MongoDb + Angular - MEAN"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        >
-        </iframe>
+        <ng-container *ngIf="clase_selected">
+          <iframe
+            style="width: 100%"
+            height="800"
+            [src]="urlVideo(clase_selected)"
+            [attr.title]="clase_selected.title"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          >
+          </iframe>
+        </ng-container>
         <!-- End Viedo Wrapper  -->
 
         <div class="row row--30 gy-5 pt--60 justify-content-center">
@@ -181,7 +183,7 @@
                                   *ngFor="let clase of section.clases"
                                 >
                                   <li>
-                                    <a href="#">
+                                    <a href="#" onclick="return false;" (click)="selectedClass(clase)">
                                       <div class="course-content-left">
                                         <i class="feather-play-circle"></i>
                                         <span class="text">{{
